webcleaner (0.18) unstable; urgency=low

  * fixes for debian install scripts
  * flush logfile when logging
  * fix log format
  * norm config_dir path in configdata for platform independency
  * HTML parser:
    add support for XML declaration tags <?...?>
    better parsing of <script> tags without inside comments
    better <!...> parsing

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 10 Oct 2001 12:48:30 +0200

webcleaner (0.17) unstable; urgency=low

  * webcleaner: import os only when really needed (thanks to
    Jim Rutledge <jimrutledge@earthlink.net>)
  * wc/proxy/__init__.py,wc/proxy/Listener.py:
    add missing commas in print statements
    (thanks to Jim Rutledge <jimrutledge@earthlink.net>)
  * wc/parser/htmlop.c: new HTML parser, adapted from libhtmlparser
    package
  * added regression tests
  * fixed typo in dns_lookups.py for Windows Registry handling
  * fixed Windows version recognition in daemon/_nt.py
  * add missing argument in daemon/_other.py and daemon/_nt.py
    start() functions
  * setup.py: install webcleaner.bat on Windows platforms

 -- Bastian Kleineidam <calvin@debian.org>  Fri,  5 Oct 2001 15:41:15 +0200

webcleaner (0.16) unstable; urgency=low

  * add PackError and UnpackError exception classes to dnslib.py
  * add logrotating in debian package
  * cosmetic cleanups
  * remove Content-Length: header when we enabled content changing
    modules like the HTML Rewriter
  * improved onlinetests
  * send Content-Length: header in ServerHandleDirectly class
  * return after calling ServerHandleDirectly
  * check for blocked links before giving config and statistics data
  * added replacer filter which can replace arbitrary strings in the
    data stream. For now only the response content gets filtered.
  * DNS config for Windows platforms improved

 -- Bastian Kleineidam <calvin@debian.org>  Fri, 24 Aug 2001 16:52:28 +0200

webcleaner (0.15) unstable; urgency=low

  * fix parser with unquoted tag attributes ending in a slash