@@ -3,7 +3,8 @@
 <webcleaner
  version="0.8"
  port="9090"
- parentproxyport="9090"
+ parentproxyport="8000"
+ parentproxy="localhost"
  timeout="30"
  obfuscateip="0"
  debuglevel="0"
