@@ -8,8 +8,11 @@ webcleaner (0.18) unstable; urgency=low
     add support for XML declaration tags <?...?>
     better parsing of <script> tags without inside comments
     better <!...> parsing
+  * search for TEMP dir under Windows
+  * fix error handling: pass the traceback object
+  * only gunzip certain MIME types, not all (for example .tar.gz files)
 
- -- Bastian Kleineidam <calvin@debian.org>  Wed, 10 Oct 2001 12:48:30 +0200
+ -- Bastian Kleineidam <calvin@debian.org>  Fri, 12 Oct 2001 12:07:20 +0200
 
 webcleaner (0.17) unstable; urgency=low
 
